# dashboard

./: .gitignore  README.md  evaluation_dashboard.py  pyproject.toml
assets/: style.css
data/: dummy.json
data_adapter/: __init__.py  data_adapter.py  dummy_json_data_adapter.py
evaluation_semantics/: base.py  correlation_matrix.py  echo_property_histogram.py  measurement_count.py  timestamps.py
notebooks/: evaluation_notebook.ipynb
