[project]
name = "evaluation"
version = "0.1.0"
description = "Dash evaluation app as example for uv usage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=2.18.2",
    "ipdb>=0.13.13",
    "jsonschema>=4.23.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "rospkg>=1.5.1",
    "ruff>=0.9.2",
    "scipy>=1.15.1",
]

[tool.ruff]
line-length = 120
fix = true # enabling autofix

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

exclude = [
  "D107", # missing docstring for __init__
]
